ingress/mannazu-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mannazu-api-ingress
  namespace: mannazu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.mannazu.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: swagger-service
              port:
                number: 80              
        - path: /admin-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: admin-service
              port:
                number: 8080    
        - path: /auth-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-service
              port:
                number: 8080                    
        - path: /chat-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: chat-service
              port:
                number: 8080  
        - path: /community-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: community-service
              port:
                number: 8080                  
        - path: /post-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: post-service
              port:
                number: 8080  
        - path: /shop-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: shop-service
              port:
                number: 8080       
        - path: /user-service(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-service
              port:
                number: 8080
