ingress/mannazu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mannazu-ingress
  namespace: mannazu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules:
    - host: www.mannazu.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mannazu-nginx
              port:
                number: 80
    - host: api.mannazu.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mannazu-tomcat
              port:
                number: 8080
